<resources>
    <string name="app_name">LibriChePassione</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="searchWithISBN">Ricerca con codice ISBN</string>
    <string name="editTextISBN">ISBN</string>
    <string name="buttonSearch">CERCA</string>
    <string name="editTextTitle">Titolo</string>
    <string name="editTextAuthor">Autore</string>
    <string name="textViewSubject">Genere:</string>
    <string name="searchAuthorTitleSubject">Ricerca tramite Autore</string>
    <string name="titleDetail">Titolo:</string>
    <string name="authorDetail">Autore/i:</string>
    <string name="PublisherDetail">Editore:</string>
    <string name="PublisherDateDetail">Data di pubblicazione:</string>
    <string name="ISBNDetail">Identificatore/i:</string>
    <string name="CategoriesDetail">Genere:</string>
    <string name="addFavorites">Aggiungi ai preferiti</string>
    <string name="Results">Risultati:</string>
    <string name="NoResults"> Nessun risultato trovato </string>
    <string name="RemoveFavorite">Rimuovi dai preferiti</string>
    <string name="BottomNavSearch">Cerca</string>
    <string name="BottomNavSearchAdv">Ricerca Avanzata</string>
    <string name="BottomNavFav">Preferiti</string>
    <string name="ErrorTitle">Errore!</string>
    <string name="ErrorISBN">Inserire ISBN valido</string>
    <string name="ErrorAuthor">Inserire il nome di un autore</string>
    <string name="ErrorFavorites">è già presente nei preferiti!</string>
    <string name="FavoriteNoElem">Nessun elemento aggiunto ai preferiti</string>
    <string name="FavoriteElem">I tuoi libri preferiti: </string>
    <string name="RemovedByFavorites">rimosso dai preferiti</string>
    <string name="AddedToFavorites">aggiunto dai preferiti</string>

</resources>
